<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/sectionQuedamos"
        android:checkableBehavior="none">
        <item
            android:id="@+id/dondeQuedamos"
            android:title="@string/donde_quedamos"
            android:icon="@mipmap/ic_launcher"/>
    </group>
    <group android:id="@+id/sectionComemos"
        android:checkableBehavior="none">
        <item
            android:id="@+id/queComemos"
            android:title="@string/que_comemos"
            android:icon="@mipmap/ic_launcher"/>
    </group>
    <group android:id="@+id/sectionHacemos"
        android:checkableBehavior="none">
        <item
            android:id="@+id/queHacemos"
            android:title="¿Qué hacemos?"
            android:icon="@mipmap/ic_launcher"/>
    </group>
    <group android:id="@+id/sectionCompramos"
        android:checkableBehavior="none">
        <item
            android:id="@+id/dondeCompramos"
            android:title="@string/donde_compramos"
            android:icon="@mipmap/ic_launcher"/>
    </group>

    <group
        android:id="@+id/sectionPueblo"
        android:checkableBehavior="none">
        <item
            android:id="@+id/miPueblo"
            android:title="@string/mi_pueblo"
            android:icon="@mipmap/ic_launcher"/>
    </group>
</menu>