<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ctb.gmt.naibeck.guiamultiturismocentroamerica.viewmodel.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/gridLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="200dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/hospedaje" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:background="#aa000000"
                                android:padding="8dp"
                                android:text="@string/donde_quedamos"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="150dp"
                                android:layout_marginTop="8dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/noche" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:background="#aa000000"
                                android:padding="8dp"
                                android:text="@string/nite_life"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="150dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/comida" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:background="#aa000000"
                                android:padding="8dp"
                                android:text="@string/que_comemos"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="200dp"
                                android:layout_marginTop="8dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/compra" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:background="#aa000000"
                                android:padding="8dp"
                                android:text="@string/donde_compramos"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gridLinear">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/actividades" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#aa000000"
                    android:padding="8dp"
                    android:text="@string/que_hacemos"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</layout>
